# libnfc-experimental

./: .gitignore  CI_FFI_SANITY.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile.in  FFI_POLICY.md  HACKING.md  Makefile.am  NFC_SECURE_CRITICAL_FIXES_V5.md  NFC_SECURE_FINAL_REVIEW.md  NFC_SECURE_FINAL_SUMMARY.md  NFC_SECURE_IMPROVEMENTS.md  NFC_SECURE_IMPROVEMENTS_V2.md  NFC_SECURE_IMPROVEMENTS_V3_FINAL.md  NFC_SECURE_IMPROVEMENTS_V4_USER_REVIEW.md  NFC_SECURE_V5_FINAL_COMPLETION.md  NFC_SECURE_V6_REVIEW_RESPONSE.md  NFC_SECURE_V7_CRITICAL_FIXES.md  NFC_SECURE_V8_POLISH_ROBUSTNESS.md  NFC_SECURE_V9_C23_OPTIMIZATION.md  PHASE10_FINAL_COMPLETION_REPORT.md  PHASE11_CODE_QUALITY_ANALYSIS_REPORT.md  PHASE11_SESSION1_PROGRESS_REPORT.md  PHASE11_SESSION2_DRIVER_REFACTORING_REPORT.md  PHASE11_WEEK2_REFACTORING_PROGRESS.md  PHASE12_BUILD_SUCCESS_SUMMARY.md  PHASE12_SNPRINT_ISO14443A_REFACTORING_COMPLETE.md  PHASE12_STRICT_BUILD_REPORT.md  PHASE8_ROADMAP.md  PHASE8_SESSION1_PCSC_REPORT.md  PHASE8_TIER1_COMPLETION_REPORT.md  PN53X_ROBUSTNESS_IMPROVEMENTS.md  README-Windows.md  README.md  REFACTORING_PHASE12_COMPLEXITY_REDUCTION.md  REFACTORING_SESSION_SUMMARY.md  REFACTORING_SUMMARY.md  Rust.md  SECURITY.md  (+4 more)
examples/: CMakeLists.txt  Makefile.am  nfc-anticol.c  nfc-dep-initiator.c  nfc-dep-target.c  nfc-emulate-forum-tag2.c  nfc-emulate-tag.c  nfc-emulate-uid.c  nfc-mfsetuid.c  nfc-poll.c  nfc-st25tb  nfc-st25tb.c  pn53x-diagnose.c  pn53x-sam.c  pn53x-tamashell.c
examples/doc/: quick_start_example2.c
examples/ffi-sanity/: CMakeLists.txt  ffi-sanity.c
libnfc/: CMakeLists.txt  Makefile.am  NFC_SECURE_DOCUMENTATION_INDEX.md  NFC_SECURE_USAGE_GUIDE.md  conf.c  iso14443-subr.c  iso14443-subr.h  iso7816.h  libnfc.exports  log-internal.h  log.c  log.cpp  log.h  nfc-common.c  nfc-common.cpp  nfc-common.h  nfc-device.c  nfc-internal.c  nfc-internal.h  nfc-secure-examples.c  nfc-secure.c  nfc-secure.h  nfc.c  nfc_refator.c  rust_bridge.h  rust_usb_bridge.h  target-subr-helpers.c  target-subr-helpers2.c  target-subr-internal.h  target-subr.c
libnfc/buses/: i2c.c  spi.c  uart.c  usbbus.c  usbbus.h
libnfc/chips/: pn53x.c  pn53x.h
libnfc/drivers/: Makefile.am  acr122-core.c  acr122-core.h  acr122_pcsc.c  acr122_pcsc.h  acr122_usb.c  acr122_usb.h  acr122s.c  acr122s.h  arygon.c  pcsc.c  pn532_i2c.c  pn532_spi.c  pn532_uart.c  pn53x_usb.c  pn71xx.c  pn71xx.h
rust/: Cargo.toml  Makefile.am
rust/libnfc-rs/: Cargo.toml  README.md  build.rs  cbindgen.toml
rust/libnfc-rs/benches/: secure_copy.rs  secure_memset.rs
rust/libnfc-rs/include/: libnfc_rs.h
rust/libnfc-rs/src/: conf.rs  core.rs  ffi_types.rs  initiator.rs  lib.rs  lifecycle.rs  nfc_secure.rs
rust/libnfc-rs/tests/: cbindgen_diff.rs  mprotect.rs
rust/libnfc-rs/tools/: generate_cbindgen_header.py  update_cbindgen_defines.py
rust/proximate/: Cargo.toml  build.rs
rust/proximate-driver/: Cargo.toml  build.rs
rust/proximate-driver/src/: context.rs  device.rs  driver.rs  lib.rs  tests.rs
rust/proximate-native/: Cargo.toml  build.rs
rust/proximate-native/src/: lib.rs  nci.rs
rust/proximate-native/src/native/: acr122.rs  acr122_pcsc.rs  acr122_usb.rs  acr122s.rs  arygon.rs  connstring.rs  i2c.rs  mod.rs  pcsc.rs  pn53x.rs  pn71xx.rs  spi.rs  uart.rs  usb.rs
rust/proximate-native/src/native_helpers/: spi.rs  uart.rs
rust/proximate-platform/: Cargo.toml
rust/proximate-platform/src/: lib.rs  nci.rs  pcsc.rs
rust/proximate-sys/: Cargo.toml  README.md  build.rs  cbindgen.private.toml  cbindgen.toml
rust/proximate-sys/benches/: secure_copy.rs  secure_memset.rs
rust/proximate-sys/include/: libnfc_rs.h  libnfc_rs_private.h
rust/proximate-sys/src/: c_api_impl.rs  compat.rs  core.rs  ffi_strings.rs  ffi_support.rs  ffi_types.rs  initiator.rs  lib.rs  lifecycle.rs  logger.rs  private_ffi.rs  runtime_bridge.rs  secure_ffi.rs  usbbus.rs
rust/proximate-sys/src/bridge/: c_to_rust.rs  mod.rs  rust_to_c.rs  status.rs
rust/proximate-sys/src/buses/: i2c.rs  mod.rs  spi.rs  uart.rs
rust/proximate-sys/src/c_abi/: exports.rs  misc_exports.rs  mod.rs  types.rs
rust/proximate-sys/src/c_boundary/: external_registry.rs  mod.rs  raw.rs  status.rs
rust/proximate-sys/src/core/: context.rs  driver_registration.rs  mod.rs  runtime.rs  tests.rs
rust/proximate-sys/src/domain_bridge/: decode.rs  encode.rs  mod.rs
rust/proximate-sys/src/drivers/: mod.rs  pn532_i2c.rs  pn532_spi.rs  pn532_uart.rs  pn53x_native.rs  pn53x_usb.rs  pn71xx.rs
rust/proximate-sys/src/initiator/: accessors.rs  common.rs  driver_dispatch.rs  emulation.rs  io.rs  mod.rs  operations.rs  runtime.rs  tests.rs
rust/proximate-sys/src/lifecycle/: abi.rs  alloc.rs  logging.rs  mod.rs  tests.rs
rust/proximate-sys/tests/: cbindgen_diff.rs  mprotect.rs  pn53x_device_registers.rs
rust/proximate-sys/tools/: generate_cbindgen_header.py  update_cbindgen_defines.py
rust/proximate-types/: Cargo.toml  build.rs
rust/proximate-types/src/: caps.rs  connstring.rs  error.rs  lib.rs  metadata.rs  types.rs
rust/proximate/benches/: secure_copy.rs  secure_memset.rs
rust/proximate/src/: compat.rs  conf.rs  core.rs  facade.rs  initiator.rs  lib.rs  lifecycle.rs  native_helpers.rs  nfc_secure.rs  rust_api.rs  usbbus.rs
rust/proximate/src/buses/: mod.rs
rust/proximate/src/drivers/: mod.rs  pn532_i2c.rs  pn532_spi.rs  pn532_uart.rs  pn53x_native.rs  pn53x_usb.rs  pn71xx.rs
rust/proximate/src/native/: acr122.rs  acr122_pcsc.rs  acr122_usb.rs  acr122s.rs  arygon.rs  connstring.rs  (+8 more)
rust/proximate/tests/: mprotect.rs
test/: CMakeLists.txt  Makefile.am  test_acr122_core.c  test_log_bridge.c  test_public_compat_smoke.c  test_register_access.c  test_register_endianness.c  test_rust_core_device_io.c  test_rust_core_initiator.c  test_rust_core_registry.c  test_usb_bridge_link_support.c  test_usbbus_helpers.c
utils/: CMakeLists.txt  Makefile.am  jewel.c  jewel.h  mifare.c  mifare.h  nfc-barcode  nfc-emulate-forum-tag4.c  nfc-jewel.c  nfc-mfclassic.c  nfc-mfultralight.c  nfc-read-forum-tag3.c  nfc-relay-picc.c  nfc-secure.c  nfc-secure.h  nfc-utils.c  nfc-utils.h
(+91 files in other folders)
